# nomizo

./: README.md
libs/genetic-algorithm/: cargo.toml
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
neural-network/: Cargo.toml
neural-network/src/: lib.rs
